--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
     steps:
       - run:
           command: |
-            apt-get update && apt-get install -y git build-essential curl file m4 ruby texinfo libbz2-dev libcurl4-openssl-dev libexpat-dev libncurses-dev zlib1g-dev zip unzip && git --version
+            apt-get update && apt-get install -y git build-essential curl file m4 ruby texinfo libbz2-dev libcurl4-openssl-dev libexpat-dev libncurses-dev zlib1g-dev zip unzip libreadline-dev && git --version
             git clone https://github.com/sstephenson/rbenv.git ~/.rbenv && \
             git clone https://github.com/sstephenson/ruby-build.git ~/.rbenv/plugins/ruby-build && \
             cd /opt && \
