--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,11 +137,10 @@ jobs:
           environment:
             BUILD_TARGET: Android
             BUILD_NAME: SampleBuild
-            BUILD_PATH: /project/Builds
           command: |
             $HOME/.rbenv/bin/rbenv install 2.3.3
-            cp ./ci/Gemfile $BUILD_PATH/$BUILD_TARGET/Gemfile
-            cd $BUILD_PATH/$BUILD_NAME
+            cp ./ci/Gemfile ./Builds/$BUILD_TARGET/Gemfile
+            cd ./Builds/$BUILD_NAME
             eval "$($HOME/.rbenv/bin/rbenv init -)"
             $HOME/.rbenv/bin/rbenv local 2.3.3
             $HOME/.rbenv/bin/rbenv rehash
