--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
     steps:
       - run:
           command: |
-            apt-get update && apt-get install -y git rbenv ruby-build build-essential curl file m4 ruby texinfo libbz2-dev libcurl4-openssl-dev libexpat-dev libncurses-dev zlib1g-dev zip unzip libreadline-dev && git --version
+            apt-get update && apt-get install -y git rbenv ruby-build build-essential curl file m4 ruby texinfo libbz2-dev libcurl4-openssl-dev libexpat-dev libncurses-dev zlib1g-dev zip unzip libreadline-dev && git --version && apt-get update
             cd /opt && \
             wget -q https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip -O android-sdk.zip && \
             unzip -q android-sdk.zip -d android-sdk-linux && \
