--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,6 +119,8 @@ jobs:
             unzip -q android-sdk.zip -d android-sdk-linux && \
             rm -f android-sdk.zip && \
             ls -ahl android-sdk-linux
+            wget https://services.gradle.org/distributions/gradle-2.14-all.zip --no-check-certificate \
+            unzip gradle-2.14-all.zip -d /opt/gradle
       - checkout
       - run:
           <<: *setup_unity_license_env_var
@@ -135,7 +137,12 @@ jobs:
           environment:
             BUILD_TARGET: Android
             BUILD_NAME: SampleBuild
+            GRADLE_HOME: /opt/gradle/gradle-2.14
+            ANDROID_HOME: /opt/android-sdk-linux
+            BASH_ENV: ~/.bashrc
           command: |
+            echo 'export PATH=$GRADLE_HOME/bin:$PATH' >> $BASH_ENV
+            source .bash_profile
             rbenv install 2.3.0-dev
             cp ./ci/Android/Gemfile ./Builds/$BUILD_TARGET/$BUILD_NAME/Gemfile
             cp -r ./ci/Android/fastlane ./Builds/$BUILD_TARGET/$BUILD_NAME/fastlane
