--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
     steps:
       - run:
           command: |
-            apt-get update && apt-get install -y bison git rbenv ruby-build ruby-dev autoconf build-essential curl file m4 ruby texinfo libbz2-dev libcurl4-openssl-dev libexpat-dev libncurses-dev zlib1g-dev zip unzip libreadline-dev && git --version
+            apt-get update && apt-get install -y openjdk-8-jdk bison git rbenv ruby-build ruby-dev autoconf build-essential curl file m4 ruby texinfo libbz2-dev libcurl4-openssl-dev libexpat-dev libncurses-dev zlib1g-dev zip unzip libreadline-dev && git --version
             cd /opt && \
             wget -q https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip -O android-sdk.zip && \
             unzip -q android-sdk.zip -d android-sdk-linux && \
@@ -139,6 +139,7 @@ jobs:
             BUILD_NAME: SampleBuild
             GRADLE_HOME: /opt/gradle/gradle-3.2
             ANDROID_HOME: /opt/android-sdk-linux
+            JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64/jre/
           command: |
             rbenv install 2.3.0-dev
             cp ./ci/Android/Gemfile ./Builds/$BUILD_TARGET/$BUILD_NAME/Gemfile
