--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,7 +134,7 @@ jobs:
             JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64/jre/
             BUILD_PATH: /project/Builds/$BUILD_TARGET/
           command: |
-            mkdir -p $BUILD_PATH/$BUILD_NAME
+            mkdir -p $BUILD_PATH $BUILD_PATH/$BUILD_NAME
             rbenv install 2.3.0-dev
             cp ./ci/$BUILD_TARGET/Gemfile ./Builds/$BUILD_TARGET/$BUILD_NAME/Gemfile
             cp -r ./ci/$BUILD_TARGET/fastlane ./Builds/$BUILD_TARGET/$BUILD_NAME/fastlane
