--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,13 @@ jobs:
       # this will prevent following error on 'checkout' step:
       # Either git or ssh (required by git to clone through SSH) is not installed in the image. Falling back to CircleCI's native git client but the behavior may be different from official git. If this is an issue, please use an image that has official git and ssh installed.
       - run:
+        name: setup apt-get install
           command: apt-get update && apt-get install -y git && git --version
       - checkout
       - run:
           <<: *setup_unity_license_env_var
       - run:
+        name: editmode run
           environment:
             TEST_PLATFORM: editmode
           command: |
@@ -49,11 +51,13 @@ jobs:
     <<: *docker_image
     steps:
       - run:
+        name: setup apt-get install
           command: apt-get update && apt-get install -y git && git --version
       - checkout
       - run:
           <<: *setup_unity_license_env_var
       - run:
+        name: playmode run
           environment:
             TEST_PLATFORM: playmode
           command: |
@@ -68,12 +72,14 @@ jobs:
     <<: *docker_image
     steps:
       - run:
+        name: setup apt-get install
           command: |
             apt-get update && apt-get install -y git zip && git --version
       - checkout
       - run:
           <<: *setup_unity_license_env_var
       - run:
+        name: build windwos
           environment:
             BUILD_TARGET: StandaloneWindows
             BUILD_NAME: SampleBuild
@@ -90,12 +96,14 @@ jobs:
     <<: *docker_image
     steps:
       - run:
+        name: setup apt-get install
           command: |
             apt-get update && apt-get install -y git zip && git --version
       - checkout
       - run:
           <<: *setup_unity_license_env_var
       - run:
+        name: build macOS
           environment:
             BUILD_TARGET: StandaloneOSX
             BUILD_NAME: SampleBuild
@@ -112,6 +120,7 @@ jobs:
     <<: *docker_image_android
     steps:
       - run:
+        name: setup apt-get install & android sdk, gradle
           command: |
             apt-get update && apt-get install -y openjdk-8-jdk bison git rbenv ruby-build ruby-dev autoconf build-essential curl file m4 ruby texinfo libbz2-dev libcurl4-openssl-dev libexpat-dev libncurses-dev zlib1g-dev zip unzip libreadline-dev && git --version
             cd /opt && \
@@ -119,17 +128,18 @@ jobs:
             unzip -q android-sdk.zip -d android-sdk-linux && \
             rm -f android-sdk.zip && \
             ls -ahl android-sdk-linux
-            wget https://services.gradle.org/distributions/gradle-3.2-all.zip --no-check-certificate && \
-            unzip gradle-3.2-all.zip -d /opt/gradle
+            wget https://services.gradle.org/distributions/gradle-5.1-all.zip --no-check-certificate && \
+            unzip gradle-5.1-all.zip -d /opt/gradle
       - checkout
       - run:
           <<: *setup_unity_license_env_var
       - run:
+        name: build android
           environment:
             BUNDLE_IDENTIFIER: com.sample.circleci
             BUILD_TARGET: Android
             BUILD_NAME: SampleBuild
-            GRADLE_HOME: /opt/gradle/gradle-3.2
+            GRADLE_HOME: /opt/gradle/gradle-5.1
             ANDROID_HOME: /opt/android-sdk-linux
             JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64/jre/
             BUILD_PATH: /project/Builds/$BUILD_TARGET/
