--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,7 +159,7 @@ jobs:
       - run:
           <<: *remove_license_file
       - store_artifacts:
-          path: './Builds/'
+          path: './Builds/$BUILD_TARGET/$BUILD_NAME/build/outputs/apk/debug/$BUILD_NAME-deubg.apk'
 workflows:
   version: 2
   test_and_build:
