--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,12 +3,25 @@ pool:
 
 container: gableroux/unity3d:2018.3.3f1
 
+variables:
+  TEST_PLATFORM: editmode
+
 steps:
+  - script: "apt-get update && apt-get install -y git && git --version"
+    displayName: 'setup apt-get install'
   - script: |
       mkdir -p /root/.cache/unity3d
       mkdir -p /root/.local/share/unity3d/Unity/
       openssl version
-      openssl aes-256-cbc -md md5 -d -in ./ci/Unity_v2018.x.ulf-cipher -out Unity_v2018.x.ulf -k $KEY
-      export UNITY_LICENSE_CONTENT=`cat Unity_v2018.x.ulf`
+      openssl aes-256-cbc -md md5 -d -in ./ci/Unity_v2018.ulf-cipher -out Unity_v2018.ulf -k $KEY
+      export UNITY_LICENSE_CONTENT=`cat Unity_v2018.ulf`
       echo "$UNITY_LICENSE_CONTENT" | tr -d '\r' > "/root/.local/share/unity3d/Unity/Unity_lic.ulf"
-    displayName: 'prepare'
+    displayName: 'setup_unity_license_env_var'
+  - script: |
+      chmod -R 755 ./ci/test.sh
+      ./ci/test.sh
+    displayName: 'editmode run'
+  - script: |
+      rm /Unity_v2018.ulf
+      rm /root/.local/share/unity3d/Unity/Unity_lic.ulf
+    displayName: 'remove_license_file'
