--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ variables:
   TEST_PLATFORM: editmode
 
 steps:
-  - script: "apt-get update && apt-get install -y git && git --version"
+  - script: "sudo apt-get update && apt-get install -y git && git --version"
     displayName: 'setup apt-get install'
   - script: |
       mkdir -p /root/.cache/unity3d
